<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/design_default_color_error">

    <TextView
        android:id="@+id/backgr"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounder_corner"
        >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        android:text="@string/cfc"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:layout_marginLeft="6dp"
        android:textSize="25sp"
        >
    </TextView>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/backgr"
        app:layout_constraintLeft_toLeftOf="@id/backgr"
        app:layout_constraintTop_toTopOf="@id/backgr"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/back_menu"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounder_corner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backgr"
        android:layout_marginTop="90dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="30dp"
        >
    </TextView>

    <TextView
        android:id="@+id/menu"
        android:textColor="@color/black"
        android:text="@string/menu"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backgr"
        android:layout_marginTop="53dp"
        android:layout_marginLeft="19dp"
        >
    </TextView>

    <TextView
        android:id="@+id/price"
        android:textColor="@color/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/menu"
        app:layout_constraintTop_toTopOf="@id/menu"
        android:text="@string/price"
        android:textSize="25sp"
        >
    </TextView>

    <CheckBox
        android:id="@+id/burg_check"
        android:text="@string/ost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/price"
        app:layout_constraintTop_toBottomOf="@id/backgr"
        android:layout_marginTop="45dp"
        >
    </CheckBox>

    <CheckBox
        android:id="@+id/chick_check"
        android:text="@string/ost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/burg_check"
        app:layout_constraintLeft_toRightOf="@id/price"
        android:layout_marginTop="10dp"
        >
    </CheckBox>

    <Button
        android:id="@+id/plus_button_burg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#7A7A7A"
        android:text="@string/plus_butt"
        app:layout_constraintLeft_toRightOf="@id/burg_check"
        app:layout_constraintTop_toTopOf="@id/burg_check"
        android:onClick="PlusBurg"
        >
    </Button>

    <Button
        android:id="@+id/minus_button_burg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#7A7A7A"
        android:text="@string/minus_but"
        app:layout_constraintLeft_toRightOf="@id/plus_button_burg"
        app:layout_constraintTop_toTopOf="@id/burg_check"
        android:onClick="MinusBurg"
        >
    </Button>

    <Button
        android:id="@+id/plus_button_chick"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="#7A7A7A"
        android:text="@string/plus_butt"
        app:layout_constraintLeft_toRightOf="@id/burg_check"
        app:layout_constraintTop_toBottomOf="@id/plus_button_burg"
        android:onClick="PlusChick">
    </Button>

    <Button
        android:id="@+id/minus_button_chick"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="#7A7A7A"
        android:text="@string/minus_but"
        app:layout_constraintLeft_toRightOf="@id/plus_button_chick"
        app:layout_constraintTop_toBottomOf="@id/minus_button_burg"
        android:onClick="MinusChick">
    </Button>

    <Button
        android:id="@+id/plus_button_cola"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="#7A7A7A"
        android:text="@string/plus_butt"
        app:layout_constraintLeft_toRightOf="@id/burg_check"
        app:layout_constraintTop_toBottomOf="@id/plus_button_chick"
        android:onClick="PlusCola">
    </Button>

    <Button
        android:id="@+id/minus_button_cola"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="#7A7A7A"
        android:text="@string/minus_but"
        app:layout_constraintLeft_toRightOf="@id/plus_button_chick"
        app:layout_constraintTop_toBottomOf="@id/minus_button_chick"
        android:onClick="MinusCola">
    </Button>

    <Button
        android:id="@+id/plus_button_sous"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="#7A7A7A"
        android:text="@string/plus_butt"
        app:layout_constraintLeft_toRightOf="@id/burg_check"
        app:layout_constraintTop_toBottomOf="@id/plus_button_cola"
        android:onClick="PlusSous">
    </Button>

    <Button
        android:id="@+id/minus_button_sous"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="#7A7A7A"
        android:text="@string/minus_but"
        app:layout_constraintLeft_toRightOf="@id/plus_button_chick"
        app:layout_constraintTop_toBottomOf="@id/minus_button_cola"
        android:onClick="MinusSous">
    </Button>

    <TextView
        android:id="@+id/burg_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/plus_button_chick"
        android:text="@string/num"
        app:layout_constraintTop_toTopOf="@id/plus_button_burg"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        >
    </TextView>

    <TextView
        android:id="@+id/chick_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/plus_button_chick"
        app:layout_constraintTop_toBottomOf="@id/burg_num"
        android:text="@string/num"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="37dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        >
    </TextView>

    <TextView
        android:id="@+id/cola_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/plus_button_chick"
        android:text="@string/num"
        app:layout_constraintTop_toBottomOf="@id/chick_num"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="37dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        >
    </TextView>

    <TextView
        android:id="@+id/sous_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/plus_button_chick"
        app:layout_constraintTop_toBottomOf="@id/cola_num"
        android:text="@string/num"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="37dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        >
    </TextView>

    <TextView
        android:id="@+id/result"
        android:text="@string/result"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/menu"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="22dp"
        android:textColor="@color/black"
        >
    </TextView>

    <EditText
        android:id="@+id/comment"
        android:hint="@string/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="22dp"
        >
    </EditText>


    <TextView
        android:id="@+id/sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/menu"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="30dp"
        android:layout_marginTop="22dp"
        android:textSize="25sp"
        android:text="@string/sum"
        android:textColor="@color/green"
        >
    </TextView>

    <TextView
        android:id="@+id/doll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/menu"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="22dp"
        android:textSize="25sp"
        android:text="@string/doll"
        android:textColor="@color/green"
        >
    </TextView>

    <Button
        android:id="@+id/go"
        android:text="@string/go"
        android:backgroundTint="@color/design_default_color_error"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/comment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:onClick="Go"
        >
    </Button>

    <TextView
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:id="@+id/ogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/go"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        >
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>